--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   </head>
   <body>
     <!-- Tab Content -->
-    <!-- <ul class="nav nav-tabs p-3" id="myTab" role="tablist">
+    <ul class="nav nav-tabs p-3" id="myTab" role="tablist">
       <li class="nav-item" role="presentation">
         <button
           class="nav-link active"
@@ -57,7 +57,7 @@
           Total Engagement
         </button>
       </li>
-    </ul> -->
+    </ul>
     <div class="tab-content" id="myTabContent">
         <!-- Today Tab -->
         <div class=" tab-pane fade show active" id="today-tab-pane" role="tabpanel" aria-labelledby="today-tab" tabindex="0">
